fix dependencies for library targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ target_link_libraries(ppr-routing
   utl
   cista
   unordered_dense
+  ppr-common
 )
 target_compile_features(ppr-routing PUBLIC cxx_std_20)
 set_target_properties(ppr-routing PROPERTIES CXX_EXTENSIONS OFF)
@@ -150,6 +151,7 @@ target_link_libraries(ppr-preprocessing
   protozero
   cista
   unordered_dense
+  ppr-common
 )
 target_compile_features(ppr-preprocessing PUBLIC cxx_std_20)
 set_target_properties(ppr-preprocessing PROPERTIES CXX_EXTENSIONS OFF)
