--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,14 @@ option(PPR_MIMALLOC "use mimalloc" OFF)
 ################################
 # Basic Compiler Flags
 ################################
-set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
+if(NOT DEFINED CMAKE_MSVC_RUNTIME_LIBRARY)
+  if(PPR_MIMALLOC)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+  else()
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+  endif()
+endif()
 
 if(MSVC)
   set(ppr-compile-flags
@@ -57,12 +64,28 @@ if (MSVC)
   string(REPLACE "/Zi" "${PPR_MSVC_DEBUG_FLAGS}" CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
   string(REPLACE "/Zi" "${PPR_MSVC_DEBUG_FLAGS}" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
 endif ()
+
+if(PPR_MIMALLOC)
+  if(WIN32)
+    set(MI_BUILD_SHARED ON)
+  endif()
+endif()
+
 include(cmake/buildcache.cmake)
 include(cmake/pkg.cmake)
-if (PPR_MIMALLOC)
-  target_link_libraries(cista INTERFACE mimalloc-static)
+
+if(PPR_MIMALLOC)
+  if(WIN32)
+    set(ppr-mimalloc-lib mimalloc)
+    target_link_libraries(cista INTERFACE mimalloc)
+  else()
+    set(ppr-mimalloc-lib mimalloc-obj)
+    target_link_libraries(cista INTERFACE mimalloc-static)
+  endif()
+  target_compile_definitions(cista INTERFACE CISTA_USE_MIMALLOC=1)
   target_compile_definitions(boost INTERFACE BOOST_ASIO_DISABLE_STD_ALIGNED_ALLOC=1)
-endif ()
+  set(ppr-compile-definitions PPR_USE_MIMALLOC=1)
+endif()
 
 ################################
 # Linter
@@ -84,6 +107,7 @@ add_library(ppr-common ${ppr-common-files})
 target_include_directories(ppr-common PUBLIC include)
 target_link_libraries(ppr-common
   ${CMAKE_THREAD_LIBS_INIT}
+  ${ppr-mimalloc-lib}
   boost
   utl
   cista
@@ -92,6 +116,23 @@ target_compile_features(ppr-common PUBLIC cxx_std_20)
 set_target_properties(ppr-common PROPERTIES CXX_EXTENSIONS OFF)
 target_compile_options(ppr-common PRIVATE ${ppr-compile-flags})
 target_compile_definitions(ppr-common PRIVATE ${ppr-compile-definitions})
+
+if(PPR_MIMALLOC AND WIN32)
+  add_custom_command(
+    TARGET ppr-common POST_BUILD
+    COMMAND "${CMAKE_COMMAND}" -E copy
+      "${CMAKE_CURRENT_BINARY_DIR}/deps/mimalloc/mimalloc.dll"
+      $<TARGET_FILE_DIR:ppr-common>
+    COMMENT "Copy mimalloc.dll to output directory"
+  )
+  add_custom_command(
+    TARGET ppr-common POST_BUILD
+    COMMAND "${CMAKE_COMMAND}" -E copy
+      "${CMAKE_CURRENT_BINARY_DIR}/deps/mimalloc/mimalloc-redirect.dll"
+      $<TARGET_FILE_DIR:ppr-common>
+    COMMENT "Copy mimalloc-redirect.dll to output directory"
+  )
+endif()
 
 
 ################################
@@ -105,6 +146,7 @@ add_library(ppr-routing ${ppr-routing-files})
 target_include_directories(ppr-routing PUBLIC include)
 target_link_libraries(ppr-routing
   ${CMAKE_THREAD_LIBS_INIT}
+  ${ppr-mimalloc-lib}
   boost
   utl
   cista
@@ -146,6 +188,7 @@ target_link_libraries(ppr-preprocessing
   boost-filesystem
   boost-iostreams
   ${CMAKE_THREAD_LIBS_INIT}
+  ${ppr-mimalloc-lib}
   utl
   osmium
   protozero
@@ -168,13 +211,12 @@ file(GLOB_RECURSE ppr-preprocess-files
 add_executable(ppr-preprocess ${ppr-preprocess-files})
 target_include_directories(ppr-preprocess PUBLIC include)
 target_link_libraries(ppr-preprocess
+  ${CMAKE_THREAD_LIBS_INIT}
+  ${ppr-mimalloc-lib}
   ppr-preprocessing
   ppr-common
   conf
 )
-if (PPR_MIMALLOC)
-  target_link_libraries(ppr-preprocess mimalloc-obj)
-endif ()
 target_compile_features(ppr-preprocess PUBLIC cxx_std_20)
 set_target_properties(ppr-preprocess PROPERTIES CXX_EXTENSIONS OFF)
 target_compile_options(ppr-preprocess PRIVATE ${ppr-compile-flags})
@@ -191,6 +233,7 @@ file(GLOB_RECURSE ppr-backend-files
 add_executable(ppr-backend ${ppr-backend-files})
 target_link_libraries(ppr-backend
   ${CMAKE_THREAD_LIBS_INIT}
+  ${ppr-mimalloc-lib}
   web-server-tls
   boost-filesystem
   boost-iostreams
@@ -200,9 +243,6 @@ target_link_libraries(ppr-backend
   ppr-common
   rapidjson
 )
-if (PPR_MIMALLOC)
-  target_link_libraries(ppr-backend mimalloc-obj)
-endif ()
 target_compile_features(ppr-backend PUBLIC cxx_std_20)
 set_target_properties(ppr-backend PROPERTIES CXX_EXTENSIONS OFF)
 target_compile_options(ppr-backend PRIVATE ${ppr-compile-flags})
@@ -219,6 +259,7 @@ file(GLOB_RECURSE footrouting-files
 add_executable(footrouting ${footrouting-files})
 target_link_libraries(footrouting
   ${CMAKE_THREAD_LIBS_INIT}
+  ${ppr-mimalloc-lib}
   web-server-tls
   boost-iostreams
   conf
@@ -230,9 +271,6 @@ target_link_libraries(footrouting
   protozero
   rapidjson
 )
-if (PPR_MIMALLOC)
-  target_link_libraries(footrouting mimalloc-obj)
-endif ()
 target_compile_features(footrouting PUBLIC cxx_std_20)
 set_target_properties(footrouting PROPERTIES CXX_EXTENSIONS OFF)
 target_compile_options(footrouting PRIVATE ${ppr-compile-flags})
@@ -251,6 +289,7 @@ target_link_libraries(ppr-benchmark
   zlibstatic
   boost-filesystem
   ${CMAKE_THREAD_LIBS_INIT}
+  ${ppr-mimalloc-lib}
   conf
   ppr-routing
   ppr-common
@@ -259,9 +298,6 @@ target_link_libraries(ppr-benchmark
   protozero
   rapidjson
 )
-if (PPR_MIMALLOC)
-  target_link_libraries(ppr-benchmark mimalloc-obj)
-endif ()
 target_compile_features(ppr-benchmark PUBLIC cxx_std_20)
 set_target_properties(ppr-benchmark PROPERTIES CXX_EXTENSIONS OFF)
 target_compile_options(ppr-benchmark PRIVATE ${ppr-compile-flags})
