--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -47,7 +47,7 @@ jobs:
             cxx: clang++
             cc: clang
             mode: Release
-            mimalloc: off
+            mimalloc: on
             cxxflags: -stdlib=libc++
             os: macos-latest
             artifact: macos
@@ -76,7 +76,7 @@ jobs:
             cxx: clang++-16
             cc: clang-16
             mode: Release
-            mimalloc: off
+            mimalloc: on
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             lint: true
@@ -85,7 +85,7 @@ jobs:
             cxx: clang++-16
             cc: clang-16
             mode: Release
-            mimalloc: off
+            mimalloc: on
             cflags: -fsanitize=address,undefined -fno-omit-frame-pointer
             cxxflags: -fsanitize=address,undefined -fno-omit-frame-pointer -stdlib=libc++
             ldflags: -lc++abi
