--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -124,7 +124,7 @@ jobs:
           wget -nv -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
           sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main"
           sudo apt-get update
-          sudo apt-get install -qq --no-install-recommends \
+          sudo apt-get install -V -f --no-install-recommends \
             clang-16 \
             clang-tools-16 \
             clang-format-16 \
