--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -124,6 +124,7 @@ jobs:
           wget -nv -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
           sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main"
           sudo apt-get update
+          dpkg -l
           sudo apt-get install -V -f --no-install-recommends \
             clang-16 \
             clang-tools-16 \
@@ -132,7 +133,8 @@ jobs:
             libc++-16-dev \
             libc++abi-16-dev \
             libclang-common-16-dev \
-            libclang-rt-16-dev
+            libclang-rt-16-dev \
+            libunwind-16-dev
 
       - name: Install ninja (Ubuntu)
         if: matrix.config.os != 'macos-latest'
