--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -23,14 +23,14 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo apt-get install -qq --no-install-recommends \
+          sudo apt-get install -y --no-install-recommends \
             apt-transport-https \
             ca-certificates \
             software-properties-common
           wget -nv -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
           sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main"
           sudo apt-get update
-          sudo apt-get install -qq --no-install-recommends \
+          sudo apt-get install -y --no-install-recommends \
             clang-format-16
 
       - name: Format files
@@ -106,7 +106,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # ==== INSTALL ====
-      - name: Upgrade Packages
+      - name: Update Packages
         if: matrix.config.os != 'macos-latest'
         env:
           DEBIAN_FRONTEND: noninteractive
@@ -124,7 +124,10 @@ jobs:
           wget -nv -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
           sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main"
           sudo apt-get update
-          sudo apt-get remove \
+          sudo apt-get purge --auto-remove \
+            llvm \
+            llvm-14 \
+            python3-lldb-14 \
             libc++-dev \
             libc++1-14 \
             libc++abi-dev \
@@ -132,8 +135,7 @@ jobs:
             libc++abi-14-dev \
             libunwind-14 \
             libunwind-14-dev
-          dpkg -l
-          sudo apt-get install -V -f --no-install-recommends \
+          sudo apt-get install -y --no-install-recommends \
             clang-16 \
             clang-tools-16 \
             clang-format-16 \
