--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -20,18 +20,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install clang-format
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          sudo apt-get install -y --no-install-recommends \
-            apt-transport-https \
-            ca-certificates \
-            software-properties-common
-          wget -nv -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
-          sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main"
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends \
-            clang-format-16
+        uses: ./.github/actions/install-llvm
+        with:
+          packages: clang-format-16
 
       - name: Format files
         run: find src include -type f -a \( -name "*.cc" -o -name "*.h" \) -print0 | xargs -0 clang-format-16 -i
@@ -114,37 +105,7 @@ jobs:
 
       - name: Install LLVM
         if: matrix.config.os != 'macos-latest' && matrix.config.cc == 'clang-16'
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          sudo apt-get install -qq --no-install-recommends \
-            apt-transport-https \
-            ca-certificates \
-            software-properties-common
-          wget -nv -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
-          sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main"
-          sudo apt-get update
-          sudo apt-get purge --auto-remove \
-            llvm \
-            llvm-14 \
-            python3-lldb-14 \
-            libc++-dev \
-            libc++1-14 \
-            libc++abi-dev \
-            libc++abi1-14 \
-            libc++abi-14-dev \
-            libunwind-14 \
-            libunwind-14-dev
-          sudo apt-get install -y --no-install-recommends \
-            clang-16 \
-            clang-tools-16 \
-            clang-format-16 \
-            clang-tidy-16 \
-            libc++-16-dev \
-            libc++abi-16-dev \
-            libclang-common-16-dev \
-            libclang-rt-16-dev \
-            libunwind-16-dev
+        uses: ./.github/actions/install-llvm
 
       - name: Install ninja (Ubuntu)
         if: matrix.config.os != 'macos-latest'
