--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -20,14 +20,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install clang-format
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 16
-          rm llvm.sh
-          sudo apt-get install -y --no-install-recommends clang-format-16
+        uses: ./.github/actions/install-llvm
+        with:
+          packages: clang-format-16
 
       - name: Format files
         run: find src include -type f -a \( -name "*.cc" -o -name "*.h" \) -print0 | xargs -0 clang-format-16 -i
@@ -102,7 +97,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # ==== INSTALL ====
-      - name: Upgrade Packages
+      - name: Update Packages
         if: matrix.config.os != 'macos-latest'
         env:
           DEBIAN_FRONTEND: noninteractive
@@ -110,14 +105,7 @@ jobs:
 
       - name: Install LLVM
         if: matrix.config.os != 'macos-latest' && matrix.config.cc == 'clang-16'
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 16
-          rm llvm.sh
-          sudo apt-get install -y --no-install-recommends libc++-16-dev libc++abi-16-dev clang-tidy-16 libclang-common-16-dev libclang-rt-16-dev
+        uses: ./.github/actions/install-llvm
 
       - name: Install ninja (Ubuntu)
         if: matrix.config.os != 'macos-latest'
