--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -13,10 +13,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  LLVM_VERSION: 16
-  GCC_VERSION: 12
-
 jobs:
   formatting:
     runs-on: ubuntu-latest
@@ -26,11 +22,11 @@ jobs:
       - name: Install clang-format
         uses: ./.github/actions/install-llvm
         with:
-          version: ${{ env.LLVM_VERSION }}
-          packages: clang-format-${{ env.LLVM_VERSION }}
+          version: 16
+          packages: clang-format-16
 
       - name: Format files
-        run: find src include -type f -a \( -name "*.cc" -o -name "*.h" \) -print0 | xargs -0 clang-format-${{ env.LLVM_VERSION }} -i
+        run: find src include -type f -a \( -name "*.cc" -o -name "*.h" \) -print0 | xargs -0 clang-format-16 -i
 
       - name: Check for differences
         run: |
@@ -59,39 +55,39 @@ jobs:
             cxxflags: -stdlib=libc++
             os: macos-14
             artifact: macos-arm64
-          - name: GCC ${{ env.GCC_VERSION }} Release
-            cxx: g++-${{ env.GCC_VERSION }}
-            cc: gcc-${{ env.GCC_VERSION }}
+          - name: GCC 12 Release
+            cxx: g++-12
+            cc: gcc-12
             mode: Release
             mimalloc: on
             os: ubuntu-latest
             artifact: linux
-          - name: GCC ${{ env.GCC_VERSION }} Debug
-            cxx: g++-${{ env.GCC_VERSION }}
-            cc: gcc-${{ env.GCC_VERSION }}
+          - name: GCC 12 Debug
+            cxx: g++-12
+            cc: gcc-12
             mode: Debug
             mimalloc: on
             os: ubuntu-latest
-          - name: Clang ${{ env.LLVM_VERSION }} Release
-            cxx: clang++-${{ env.LLVM_VERSION }}
-            cc: clang-${{ env.LLVM_VERSION }}
+          - name: Clang 16 Release
+            cxx: clang++-16
+            cc: clang-16
             mode: Release
             mimalloc: on
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             os: ubuntu-latest
           - name: Clang Tidy
-            cxx: clang++-${{ env.LLVM_VERSION }}
-            cc: clang-${{ env.LLVM_VERSION }}
+            cxx: clang++-16
+            cc: clang-16
             mode: Release
             mimalloc: on
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             lint: true
             os: ubuntu-latest
-          - key: Clang ${{ env.LLVM_VERSION }} Sanitizer
-            cxx: clang++-${{ env.LLVM_VERSION }}
-            cc: clang-${{ env.LLVM_VERSION }}
+          - key: Clang 16 Sanitizer
+            cxx: clang++-16
+            cc: clang-16
             mode: Release
             mimalloc: on
             cflags: -fsanitize=address,undefined -fno-omit-frame-pointer
@@ -120,7 +116,7 @@ jobs:
         if: ${{ !startsWith(matrix.config.os, 'macos-') && startsWith(matrix.config.cc, 'clang') }}
         uses: ./.github/actions/install-llvm
         with:
-          version: ${{ env.LLVM_VERSION }}
+          version: 16
 
       - name: Install ninja (Ubuntu)
         if: ${{ !startsWith(matrix.config.os, 'macos-') }}
@@ -133,7 +129,7 @@ jobs:
         run: brew install ninja
 
       - name: Install Valgrind
-        if: ${{ matrix.config.mode == 'Debug' && matrix.config.cc == 'gcc-${{ env.GCC_VERSION }}' }}
+        if: ${{ matrix.config.mode == 'Debug' && matrix.config.cc == 'gcc-12' }}
         env:
           DEBIAN_FRONTEND: noninteractive
         run: sudo apt-get install -y --no-install-recommends valgrind
