--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,7 +20,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        mode: [ Debug, Release ]
+        config:
+          - name: Debug
+            preset: msvc-debug
+          - name: Release
+            preset: msvc-release
+            artifact: windows
+
 
     env:
       CXX: cl.exe
@@ -44,11 +50,11 @@ jobs:
         id: restore-buildcache
         with:
           path: ${{ github.workspace }}/.buildcache
-          key: buildcache-windows-${{ matrix.mode }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-${{ hashFiles('**/*.cc') }}
+          key: buildcache-windows-${{ matrix.config.preset }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-${{ hashFiles('**/*.cc') }}
           restore-keys: |
-            buildcache-windows-${{ matrix.mode }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}
-            buildcache-windows-${{ matrix.mode }}-${{ hashFiles('.pkg') }}-
-            buildcache-windows-${{ matrix.mode }}-
+            buildcache-windows-${{ matrix.config.preset }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}
+            buildcache-windows-${{ matrix.config.preset }}-${{ hashFiles('.pkg') }}-
+            buildcache-windows-${{ matrix.config.preset }}-
 
       - name: Restore Dependencies Cache
         uses: actions/cache/restore@v4
@@ -59,7 +65,7 @@ jobs:
           restore-keys: deps-
 
       # ==== BUILD ====
-      - name: Setup VS Dev SHell
+      - name: Setup VS Dev Shell
         run: |
           $devShell = &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -find **\Microsoft.VisualStudio.DevShell.dll
           $installPath = &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -property installationpath
@@ -84,7 +90,7 @@ jobs:
 
       # ==== DISTRIBUTION ====
       - name: Create Distribution
-        if: matrix.mode == 'Release'
+        if: matrix.config.artifact != ''
         run: |
           mkdir dist
           mv .\build\*.exe dist
@@ -92,22 +98,22 @@ jobs:
           mv .\ui\web dist
 
       - name: Upload Distribution
-        if: matrix.mode == 'Release'
+        if: matrix.config.artifact != ''
         uses: actions/upload-artifact@v4
         with:
-          name: ppr-windows
+          name: ppr-${{ matrix.config.artifact }}
           path: dist
 
       # ==== RELEASE ====
       - name: Upload Release
-        if: github.event.action == 'published' && matrix.mode == 'Release'
+        if: github.event.action == 'published' && matrix.config.artifact != ''
         uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./ppr-windows.zip
-          asset_name: ppr-windows.zip
+          asset_path: ./ppr-${{ matrix.config.artifact }}.zip
+          asset_name: ppr-${{ matrix.config.artifact }}.zip
           asset_content_type: application/zip
 
       # ==== SAVE CACHE ====
